syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "MultiPathAvatarType.proto";

message AvatarPathChangedNotify {
	uint32 base_avatar_id = 3;
	MultiPathAvatarType multi_path_avatar_type = 8;
}